<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/courtFinderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/courtfinder"
        android:textColor="#FFFDD0"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/noAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/courtFinderTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#FFFDD0"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/createAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/noAccountTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/create_your_account"
        android:textColor="#FFFDD0"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/createAccountTextView"
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/username_login"
        android:padding="12dp"
        android:textColorHint="#FFFDD0"
        android:textColor="#FFFDD0"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/password"
        android:padding="12dp"
        android:textColorHint="#FFFDD0"
        android:textColor="#FFFDD0"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textColor="#FFFDD0"
        android:textSize="14sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPasswordTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/loginWithTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:text="@string/login_with"
        android:textColor="#FFFDD0"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/socialLoginLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginWithTextView"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo1"
            android:src="@drawable/facebook_icon" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo2"
            android:src="@drawable/google_icon" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/copyright_2025_sarabia_federe_inc"
        android:textColor="#FFFDD0" />
</RelativeLayout>
