<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/courtFinderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/courtfinder"
        android:textColor="#FFFDD0"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/courtFinderTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/signup"
        android:textColor="#FFFDD0"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/SignUp"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints="Username"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/username_signup"
        android:padding="12dp"
        android:textColorHint="#FFFDD0"
        android:textColor="#FFFDD0"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints="Email"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/email_signup"
        android:padding="12dp"
        android:textColorHint="#FFFDD0"
        android:textColor="#FFFDD0"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints="Password"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/password"
        android:padding="12dp"
        android:textColorHint="#FFFDD0"
        android:textColor="#FFFDD0"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints="Confirm Password"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/confirm_password_signup"
        android:padding="12dp"
        android:textColorHint="#FFFDD0"
        android:textColor="#FFFDD0"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:text="@string/signup"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/signupWithTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signupButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_with"
        android:textColor="#FFFDD0"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/socialLoginLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signupWithTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/todo1"
            android:src="@drawable/facebook_icon" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo2"
            android:src="@drawable/google_icon" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/copyright_2025_sarabia_federe_inc"
        android:textColor="#FFFDD0" />

</RelativeLayout>